<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dialog_habit"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame"
    android:padding="15dp"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        style="?android:attr/textAppearanceLarge"
        android:textColor="#212121"
        android:text="Create habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="start|center_vertical"
            android:minWidth="300dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">

                <EditText

                    android:inputType="textCapSentences"
                    android:ems="10"
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <requestFocus/>
                </EditText>
            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/imgColor"
                android:src="@mipmap/ic_action_color_light"
                android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textCapSentences"
                android:ems="10"
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question"
                >

                <requestFocus/>
            </EditText>
        </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:minWidth="300dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/repeat"
            android:textSize="16dp"
            android:text="@string/repeat"
            android:paddingLeft="6dp"
            android:gravity="left"
            android:minWidth="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/repeat"
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:entries="@array/frequencyQuickSelect"
            android:minWidth="400dp"
            android:theme="@style/dialogFormText"
            android:visibility="visible"/>
        <LinearLayout
            android:id="@+id/customRepeat"
            android:visibility="invisible"
            android:layout_toRightOf="@id/repeat"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill">
            <EditText
                android:textColor="#000"
                android:text="1"
                android:id="@+id/numerator"
                style="@style/dialogFormInputLargeNumber"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:gravity="center"
                android:text="@string/times_every"/>

            <EditText
                android:textColor="#000"
                android:text="1"
                android:id="@+id/denominator"
                style="@style/dialogFormInputLargeNumber"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:text="@string/days"/>

        </LinearLayout>


    </RelativeLayout>
        <LinearLayout
            android:minWidth="300dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:textSize="16dp"
                android:text="@string/Reminder"
                android:paddingLeft="6dp"
                android:gravity="left"
                android:minWidth="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/layout_panel"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:text="Off"
                    android:id="@+id/edtTime"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:background="@drawable/down"
                    android:id="@+id/btnOK"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:minWidth="300dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_weight="0"
                android:visibility="invisible"
                android:textSize="16dp"
                android:text=""
                android:paddingLeft="6dp"
                android:gravity="left"
                android:minWidth="90dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/layout_panel2"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="4"
                    android:id="@+id/txtDay"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:text="             Any day of the week "
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_marginRight="28dp"
                    android:layout_weight="0.3"
                    android:background="@drawable/down"
                    android:layout_width="0dp"
                    android:layout_height="20dp" />
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp">

        <Button
            android:id="@+id/btnDis"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discard"/>

        <Button
            android:id="@+id/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>